# StudyBuddy

./: .gitignore  CLAUDE.md  README.md  Vision.txt  architecture.txt  cognee_arch.txt  logs.txt  model.txt  package-lock.json  package.json  vercel.json
.claude/: settings.json
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt  test_cognee.py  test_cognify.py  test_search.py
backend/app/: main.py
backend/app/agents/: brain_agent.py  cerebras_client.py  cerebras_errors.py  evaluator_agent.py  infinity_wiki_agent.py  modality_router.py  net_research_agent.py  report_agent.py  senses_agent.py  study_buddy_agent.py  tutor_agent.py  wiki_agent.py
backend/app/rag/: chromadb_client.py  chunker.py  embeddings.py  ingestion.py
backend/app/routers/: annotations.py  health.py  ingest.py  library.py  regions.py  review.py  sandbox.py  session.py
backend/app/schemas/: annotation.py  graph.py  journal.py  session.py
backend/app/services/: annotation_service.py  graph_state.py  journal_service.py  layout_service.py  memory_service.py  output_cache.py  progress_service.py  scholar_service.py  session_commit.py  session_files.py  settings_service.py  student_memory.py  summary_writer.py  transcription_service.py  youtube_service.py
backend/app/websockets/: connection_manager.py  handlers.py
backend/tests/: test_cerebras_client.py  test_cerebras_errors.py  test_deepdive.py  test_graph_state.py  test_graph_streaming.py  test_grounded_plot.py  test_journal.py  test_layout_service.py  test_memory_service.py  test_modality_router.py  test_progress_and_eval.py  test_schemas.py  test_tutor_lesson.py
electron/: main.js  preload.js
frontend/: package-lock.json  package.json  test.cjs  test2.cjs  test3.cjs  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: chatBlocks.ts  (+4 more)
(+41 files in other folders)
