[project]
name = "study-buddy-backend"
version = "0.1.0"
description = "Study Buddy FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "websockets>=12.0",
    "cerebras-cloud-sdk>=1.19.0",
    "chromadb>=0.5.3",
    "langchain-text-splitters>=0.2.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "youtube-transcript-api>=0.6.2",
    "google-api-python-client>=2.137.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "cognee==0.1.39",   # v2 — cross-session memory, re-enable when ready
    "lancedb>=0.6.13",  # v2 — required by cognee
    "pymupdf>=1.28.0",
    "pymupdf4llm>=0.0.17",
    "pwdlib[argon2]>=0.2.0",
    "fastembed>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
    "reportlab>=4.2.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
